# seer_navigator

./: .buildinfo  CHANGELOG.rst  README.rst  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  logs.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.doctrees/: about.doctree  changelog.doctree  connect.doctree  glossary.doctree  index.doctree  intro.doctree  logs.doctree  todos.doctree
.doctrees/demos/: demo.doctree  index.doctree
.doctrees/mission/: index.doctree
.doctrees/modules/: index.doctree
.doctrees/modules/api/: index.doctree
.doctrees/refs/: index.doctree
.doctrees/usage/: index.doctree
.github/workflows/: action.yml
_modules/: index.html  seer_navigator.html
_modules/seer_navigator/: sessions_navigator.html  task_viewer.html  tasks_navigator.html
_modules/seer_navigator/renderers/: base_grid.html  block_grid.html  char_grid.html  image_grid.html  solid_grid.html  tiny_grid.html
_modules/seer_navigator/screens/: image_view_modal.html  session_screen.html  sessions_screen.html  sort_modal.html  step_screen.html  task_screen.html  task_sessions_screen.html  (+3 more)
_sources/modules/: index.rst.txt
demos/: animate2.py  animate3.py  animate_grid.py  demo.html  index.html  sort2.py  sort3.py  sort_test.py
docsrc/: conf.py  index.rst  intro.rst
mission/: index.html
modules/: index.html
modules/api/: index.html
refs/: index.html
research/: datatable_data_source_strategy.md
todos/todos/: combine_navigators.md  sortable_datatable.md
usage/: index.html
(+96 files in other folders)
