[project]
name = "geometor-seer_navigator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "tools for reviewing test results with SEER"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
seer_navigator = "geometor.seer_navigator.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.seer_navigator.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/seer_navigator"
"Repository" = "https://github.com/geometor/seer_navigator"
"Issues" = "https://github.com/geometor/seer_navigator/issues"